--- a/Styles/architects.css
+++ b/Styles/architects.css
@@ -14,6 +14,9 @@
   padding: 20px 25px;
   cursor: pointer;
 }
+.text-light-gray {
+  color: #727272;
+}
 /* header style */
 header {
   background-color: rgba(255, 144, 14, 0.1);
@@ -56,40 +59,18 @@ nav li a {
   font-weight: 700;
   color: #131313;
 }
-.banner-description {
-  color: #727272;
-}
+
 .banner img {
   margin-top: 20px;
   width: 100%;
 }
 
-/* responsive media query */
-
-/* small device */
-@media screen and (max-width: 576px) {
-  header {
-    padding: 20px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
-
-/* medium device */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-  header {
-    padding: 50px;
-  }
-  nav {
-    flex-direction: column;
-  }
-}
 /* main styles */
 main {
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
+
 /* teams styles */
 .teams-container {
   display: flex;
@@ -108,7 +89,6 @@ main {
   font-size: 2.8rem;
 }
 .teams-title .quick-list {
-  color: #727272;
   font-weight: 500;
 }
 .teams-title .of-our {
@@ -118,4 +98,35 @@ main {
 .teams-title .text-features {
   color: #ff900e;
   font-weight: 700;
+}
+
+/* responsive media query */
+
+/* small device */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav,
+  .teams-container {
+    flex-direction: column;
+  }
+  .teams-img-container {
+    grid-template-columns: 1fr;
+  }
+  .teams-content {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
+/* medium device */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  header {
+    padding: 50px;
+  }
+  nav,
+  .teams-container {
+    flex-direction: column;
+  }
 }
