--- a/Styles/architects.css
+++ b/Styles/architects.css
@@ -17,6 +17,11 @@
 .text-light-gray {
   color: #727272;
 }
+.section-title {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: #131313;
+}
 /* header style */
 header {
   background-color: rgba(255, 144, 14, 0.1);
@@ -27,11 +32,7 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-.nav-title {
-  font-size: 2.8rem;
-  font-weight: 700;
-  color: #131313;
-}
+
 nav > ul {
   display: flex;
 }
