--- a/Styles/architects.css
+++ b/Styles/architects.css
@@ -100,6 +100,44 @@ main {
   color: #ff900e;
   font-weight: 700;
 }
+/* facts style */
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
+}
+.facts-card-container .card {
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 30px;
+}
+.facts-card-container .card-title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 5px;
+}
+.facts-card-container .card-stats {
+  color: #424242;
+  font-size: 2.8rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* sponsors styles */
+.sponsors {
+  text-align: center;
+}
+
+.sponsors-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 40px;
+}
+.sponsors-img-container img {
+  width: 165px;
+}
 
 /* responsive media query */
 
@@ -109,15 +147,21 @@ main {
     padding: 20px;
   }
   nav,
-  .teams-container {
+  .teams-container,
+  .facts-card-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
   .teams-img-container {
     grid-template-columns: 1fr;
   }
-  .teams-content {
+  .teams-content,
+  .facts-card-container {
     padding-right: 20px;
     padding-left: 20px;
+  }
+  .facts-card-container {
+    gap: 20px;
   }
 }
 
@@ -127,7 +171,8 @@ main {
     padding: 50px;
   }
   nav,
-  .teams-container {
+  .teams-container,
+  .sponsors-img-container {
     flex-direction: column;
   }
 }
